--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,28 +1,21 @@
-<h1>List of all articles</h1>
-	
-	<%= link_to "Stwórz swój artykuł", new_article_path %>
-	<% @article1.each do |article| %>
-	<ul>
-		<li>
-		Tytuł: <%= article.title %> <%= link_to "Show article", article_path(article) %>
-		</li>
-	</ul>
-	<ul>
-		<li>
-		Description: <%= article.description %> <%= link_to "Edit article", edit_article_path(article) %>
-		</li>
-	</ul>
-	<ul>
-		<li>
-		Article created by: <%= article.owner %> 
-		</li>
-	</ul>
-	<ul>
-		<li>
-			<%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %> 
-		</li>
-	</ul>
-	<hr>
-
-
-<%end%>
+<h1 align="center">Listing all articles</h1>
+<% @articles.each do |article| %>
+<div class="row">
+<div class="col-xs-8 col-xs-offset-2">
+<div class="well well-lg">
+<div class="article-title">
+<%= link_to article.title, article_path(article) %>
+</div>
+<div class="article-body">
+<%= truncate(article.description, length: 100) %>
+</div>
+<div class="article-actions">
+<%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
+<%= link_to "Delete this article", article_path(article), method: :delete,
+data: { confirm: "Are you sure you want to delete the article?"},
+class: "btn btn-xs btn-danger" %>
+</div>
+</div>
+</div>
+</div>
+<% end %>
