--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,20 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<% flash.each do |name, msg| %>
-<ul>
-	<li>
-		<%= name %><%= msg %>
-		
-	</li>	
-</ul>
 
-<%end%>
+<%= render 'layouts/navigation'%>
+<%= render 'layouts/messages' %>
 
-<center>
-<center>
+<div class = 'container'>
+
 <%= yield %>
-</center>
 
+</div>
+<%= render 'layouts/footer'%>
 </body>
 </html>
