Ending alpha_blog with login and sessions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,12 @@
 
 </div>
 <%= render 'layouts/footer'%>
+<br>
+<br>
+<br>
+<div align = "center">
+<%= debug(params) %>
+</div>
+
 </body>
 </html>
