--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,6 +1,11 @@
 <div class= 'jumbotron'>
-<h1>Welcome, users.</h1>
-<p>Witam na moim pierwszym blogu. </p>
+		<h1>Welcome, users.</h1>
+		<p>Witam na moim pierwszym blogu. 
+		</p>
 
- <p><%= link_to "Zobacz wszystkie posty", articles_path, class: "btn btn-primary btn-lg"%></p>
+		<p><%= link_to "Zobacz wszystkie posty", articles_path, class: "btn btn-primary btn-lg"%>
+		</p>
+			<div = class="center">
+			 	<p><%= link_to "Log in", login_path, class: "btn btn-primary btn-lg"%></p>
+			</div>
 </div>
