--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -34,18 +34,30 @@
         </div>
         <button type="submit" class="btn btn-default">Find it!</button>
       </form>
+      <% if logged_in? %>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %>'s profile<span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><%= link_to "Your profile", user_path(current_user)%></li>
             <li><%= link_to "New Article", new_article_path%></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><%= link_to "Edit profile", edit_user_path(current_user) %></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><%= link_to "Log out", logout_path, method: :delete %></li>
           </ul>
         </li>
       </ul>
+      <% else %>
+       <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Get on board!<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Log in", login_path%></li>
+            <li><%= link_to "Sign up", signup_path%></li>
+          </ul>
+        </li>
+      </ul>
+      <%end%>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
