--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,7 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Wszystkie posty", articles_path, class: "active", id: "all_posts_nav"%></li>
+        <li><%= link_to "All posts", articles_path, class: "active", id: "all_posts_nav"%></li>
+        <li><%= link_to "All users", users_path, class: "active", id: "all_posts_nav"%></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
           <ul class="dropdown-menu">
