--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,7 @@
 	</div>
 		<% @users.each do |user| %>
 		<div align = "center">
+			<div align = "center" ><%= gravatar_for user, size: 150 %></div>
 			<h2>
 			<%= link_to user.username, user_path(user) %>
 			</h2>
