The alpha_blog is finished

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,14 +5,15 @@
 	<br>
 	<%= will_paginate %>
 	<% @categories.each do |category| %>
-		<ul class="listing">
+		<ul class= "listing">
 			<div class="row">
 				<div class="well col-md-4 col-md-offset-4">
 					
-						<%= link_to "#{category.name}", category_path(category) %>
-					
+						<h3><%= link_to "#{category.name}", category_path(category) %></h3>
+							<h4 align = "center"><%= pluralize(category.articles.size, "article")   %></h4> 
 				</div>
 			</div>
+
 		</ul>
 	<% end %>
 	<%= will_paginate %>
