--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,6 +7,10 @@
 </div>
 <hr>
 <%= simple_format(@article.description) %>
+	<p>Artykuł należy do kategorii: </p>
+	<% @article.categories.each do |category| %>
+		<p><%= link_to "#{category.name}", category_path(category) %></p>
+	<% end %>	
 
 	<div class="article-actions">
 		<% if logged_in? && current_user == @article.user %>
